WexGit/Wex_DX/force-app/main/default/objects/IVRCaptureData__c/IVRCaptureData__c.object-meta.xml
<CustomObject>
    <description>Data store for capturing IVR data for statistics and research.</description>
    <label>IVRCaptureData</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>IVRCaptureData</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IVRCaptureData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>