WexGit/Wex_DX/force-app/main/default/objects/IVRCaptureData__c/fields/ANI__c.field-meta.xml
<CustomField>
    <fullName>ANI__c</fullName>
    <description>The 10 digit callers number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ANI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>