WexGit/Wex_DX/force-app/main/default/objects/IVRCaptureData__c/fields/CardNumber__c.field-meta.xml
<CustomField>
    <fullName>CardNumber__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>CardNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>