WexGit/Wex_DX/force-app/main/default/objects/IVRCaptureData__c/fields/ExternalAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>ExternalAccountNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ExternalAccountNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>