WexGit/Wex_DX/force-app/main/default/objects/IVRCaptureData__c/fields/IVROption__c.field-meta.xml
<CustomField>
    <fullName>IVROption__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IVROption</label>
    <length>100</length>
    <type>Text</type>
</CustomField>