WexGit/Wex_DX/force-app/main/default/objects/IVRCaptureData__c/fields/IVRPayload__c.field-meta.xml
<CustomField>
    <fullName>IVRPayload__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>IVRPayload</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>