WexGit/Wex_DX/force-app/main/default/objects/IVRCaptureData__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <description>Line of Business which comes is defined for the call queue</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LOB</label>
    <length>50</length>
    <type>Text</type>
</CustomField>