WexGit/Wex_DX/force-app/main/default/objects/IVRCaptureData__c/fields/MatchedOn__c.field-meta.xml
<CustomField>
    <fullName>MatchedOn__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>MatchedOn</label>
    <length>20</length>
    <type>Text</type>
</CustomField>