WexGit/Wex_DX/force-app/main/default/objects/IVRCaptureData__c/fields/MatchType__c.field-meta.xml
<CustomField>
    <fullName>MatchType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MatchType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>