WexGit/Wex_DX/force-app/main/default/objects/IVRCaptureData__c/fields/SessionId__c.field-meta.xml
<CustomField>
    <fullName>SessionId__c</fullName>
    <description>The session ID associated with the call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SessionId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>